--- a/src/Matches/ResultsTable/style.css
+++ b/src/Matches/ResultsTable/style.css
@@ -11,7 +11,6 @@
     text-align: center;
     vertical-align: middle;
     max-height: 550px;
-    overflow-y: auto;
 }
 
 .resultsTable__caption {
